fixed contrast errors

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -596,6 +596,7 @@ form input.submitBtn:hover{
 }
 #spotlight section h3{
     font-size: 1.3em;
+    color: black;
 }
 #spotlight section p{
     font-size: .8em;
